2002-01-15  Bastien Nocera  <hadess@hadess.net>

	* tests/Makefile.am: add all the dirs to the DIST_SUBDIRS

2002-01-15  Bastien Nocera  <hadess@hadess.net>

	* tests/Makefile.am: dodge compiling memchunk and bufspeed
	if NASM is not present

2002-01-03 Rodney Dawes  <dobey@free.fr>

	* gstreamer.spec.in: Fixed the missing plug-ins problem

2001-12-29 Rodney Dawes  <dobey@free.fr>

	* gstreamer.spec.in: Fixed up for the splitification
	
2001-12-23 Thomas Vander Stichele  <thomas@apestaart.org>

	* moved plugins out of the core to gst-plugins
	* moved some of the libs out of the core to gst-plugins
	* moved the other libs around so headers get installed in
	  <gst/(lib)/...>

2001-12-15 Thomas Vander Stichele  <thomas@apestaart.org>

	* configure.ac : major overhaul
	* m4/ dir added with lots of checks in it

2001-12-14  Michael Meeks  <michael@ximian.com>

	* gst/gst.c (gst_main, gst_main_quit): upd.

	* gst/gstutils.c (gst_util_has_arg): impl.
	(gst_util_get_int64_arg): impl.

	* plugins/mpeg2/video/gstmpeg2play.c
	(gst_mpeg2play_class_init): min frames per sec = 0.

	* plugins/mikmod/gstmikmod.c (gst_mikmod_class_init): 
	s/16bit/use16bit/ properties can't begin with a non
	alpha.

	* tools/gstreamer-guilaunch.c: fresh from the ministy
	of nasty hacks.

	* tools/Makefile.am: enable gstreamer-guilaunch for
	Gnome 2.0

	* tools/gstreamer-launch.c (main): upd.
	(idle_func): quit the mainloop.

2001-12-14  Michael Meeks  <michael@ximian.com>

        * plugins/audiofile/gstafsrc.c (gst_afsrc_class_init): upd.

        * plugins/gnomevfs/gnomevfssrc.c (gst_gnomevfssrc_class_init):
        kill broken mess for install_std_props.

        * plugins/gnomevfs/gnomevfssink.c
        (gst_gnomevfssink_class_init): upd.

        * tools/gstreamer-launch.c (main): add efence hook.

        * gst/elements/gstfilesrc.c (gst_filesrc_get): use
        a volatile pointer, don't write to the buffer.

        * gst/gstelement.c (gst_element_populate_std_props):